--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
       allow-backslash-escaping-any-character: true
   profiles:
     active: dev
+
+google-api:
+  clientId: 460334817822-6ahvhi4snl7l0actahhbg9tik5cr50jv.apps.googleusercontent.com
+  clientSecret: amPG4CcLO5j-mu1dNMHZaZkw
