--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.app'
 version = '1.0-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = 1.9
+targetCompatibility = 1.9
 
 repositories {
     mavenCentral()
@@ -17,6 +18,7 @@ dependencies {
     implementation 'org.springframework.security.oauth:spring-security-oauth2:2.0.9.RELEASE'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "com.google.code.gson:gson"
     implementation 'org.springframework.retry:spring-retry:1.1.2.RELEASE'
     implementation 'org.apache.httpcomponents:httpmime'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
