--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compile 'commons-validator:commons-validator:1.4.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.2'
     runtimeOnly 'org.flywaydb:flyway-core:6.4.1'
